# research-paper-summarizer

./: .gitignore  LLM Summarizer.ipynb  README.md  data exploration.ipynb  data_exploration_report.md  dataset_comparison.csv  eda_test.py  hugging_face login+.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_base.txt  requirements_day1.txt  test_hf.py  test_mps.py
.github/workflows/: lint.yml
config/: eval_config.yaml  training_config.yaml
data/: data exploration.ipynb  kaggle.ipynb
data/data/: Data.py
deployment/: app.py
notebooks/: 00_data_exploration.ipynb  01_training.ipynb  02_evaluation.ipynb  03_inference_demo.ipynb
src/data/: __init__.py  dataset_loader.py  preprocess.py
src/evaluation/: evaluate.py  generate_summaries.py
src/inference/: summarize.py
src/training/: train.py
